--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+      - uses: wechuli/actionsutils@v1.1.0
+        with:
+          tasks: 'context'
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
